--- a/Website/css/gp_grid.less
+++ b/Website/css/gp_grid.less
@@ -63,3 +63,10 @@
 *.gp_footer {
 	padding-bottom: @gp_gridBlockSpacing;
 }
+
+
+
+/* Column row */
+.gp_gridRow {
+    clear:both;
+}
